Switched to rake and removed json/ld

--- a/site_source/main-sdks.html
+++ b/site_source/main-sdks.html
@@ -26,171 +26,35 @@ title: Rackspace Developer Center
           {% endfor %}
     </div>
 
-            <a name="java"></a>
+    {% for sdk in site.data.sdks %}
+    <a name="{{ sdk['programming_language'] }}"></a>
 
-
-    
     <div class="bodyitem sdktable">
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>Java</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <p><a href="#">jclouds</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                <p>IRC: <a href="#">#rackspace</a> on irc.freenode.net</p>
-                <p>Got Questions?<a href="#"> sdk-support@rackspace.com</a></p>
-                <p>Report Issues on <a href="#">Github</a></p>
-            </div>
-            <a name="dotnet"></a>
-
+      <div class="lang clearfix">
+        <div class="col">
+          <h2>{{ sdk['programming_language'] }}</h2>
+          <a href="{{ sdk['download_page'] }}" class="cta">Get the SDK</a>
         </div>
-
-
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>.NET</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <a href="#">jclouds</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                IRC: <a href="#">#rackspace</a> on irc.freenode.net<br />
-                Got Questions?<a href="#"> sdk-support@rackspace.com</a><br />
-                Report Issues: <a href="#">Github</a><br />
-            </div>
-            <a name="node"></a>
-
+        <div class="col">
+          <span class="colheader">Supported SDK</span>
+          <p><a href="{{ sdk['homepage'] }}">{{ sdk['name'] }}</a></p>
         </div>
-
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>node.js</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <a href="#">jclouds</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                IRC: <a href="#">#rackspace</a> on irc.freenode.net<br />
-                Got Questions?<a href="#"> sdk-support@rackspace.com</a><br />
-                Report Issues: <a href="#">Github</a><br />
-            </div>
-            <a name="php"></a>
-
+        <div class="col">
+          <span class="colheader">Docs and Resources</span>
+          <p><a href="#">Getting Started Guide</a></p>
+          <p><a href="#">API Reference Manual</a></p>
+          <p><a href="#">SDK Release Notes</a></p>
+          <p><a href="#">Examples</a></p>
         </div>
-
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>PHP</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <a href="#">jclouds</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                IRC: <a href="#">#rackspace</a> on irc.freenode.net<br />
-                Got Questions?<a href="#"> sdk-support@rackspace.com</a><br />
-                Report Issues: <a href="#">Github</a><br />
-            </div>
-        <a name="python"></a>
+        <div class="col">
+          <span class="colheader">Community Links</span>
+          <p>IRC: <a href="#">#rackspace</a> on irc.freenode.net</p>
+          <p>Got Questions?<a href="{{ sdk['mailing_list'] }}"> {{ sdk['mailing_list'] }}</a></p>
+          <p>Report Issues on <a href="{{ sdk['bug_database'] }}">Github</a></p>
         </div>
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>Python</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <a href="#">jclouds</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                IRC: <a href="#">#rackspace</a> on irc.freenode.net<br />
-                Got Questions?<a href="#"> sdk-support@rackspace.com</a><br />
-                Report Issues: <a href="#">Github</a><br />
-            </div>
-        <a name="ruby"></a>
-
-        </div>
-
-        <div class="lang clearfix">
-            <div class="col">
-                <h2>Ruby</h2>
-                <a href="#" class="cta">Get the SDK</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Supported SDK</span>
-                <a href="#">jclouds</a>
-            </div>
-            <div class="col">
-                <span class="colheader">Docs and Resources</span>
-                <p><a href="#">Getting Started Guide</a></p>
-                <p><a href="#">API Reference Manual</a></p>
-                <p><a href="#">SDK Release Notes</a></p>
-                <p><a href="#">Examples</a></p>
-            </div>
-            <div class="col">
-                <span class="colheader">Community Links</span>
-                IRC: <a href="#">#rackspace</a> on irc.freenode.net<br />
-                Got Questions?<a href="#"> sdk-support@rackspace.com</a><br />
-                Report Issues: <a href="#">Github</a><br />
-            </div>
-
-        </div>
-
+      </div>
     </div>
+    {% endfor %}
 
 	{% include looking_for_more.html %}
 
