--- a/site_source/dashboard/feature-matrix.html
+++ b/site_source/dashboard/feature-matrix.html
@@ -18,7 +18,10 @@ results_url: 'data.json'
 
     $scope.tableParams = new ngTableParams({
         page: 1, // show first page
-        count: -1 // count per page
+        count: -1, // count per page
+        sorting: {
+          feature: 'asc' // initial sorting
+        }
       }, {
         groupBy: 'product',
         getData: function ($defer, params) {
@@ -42,7 +45,7 @@ results_url: 'data.json'
     }
   ]);
 </script>
-<div ng-app="main" ng-controller="DemoCtrl" class="datagrid">
+<div ng-app="main" ng-controller="DemoCtrl">
   <table class="table" ng-table="tableParams">
     <tbody ng-repeat="group in $groups">
       <tr class="ng-table-group">
@@ -51,30 +54,17 @@ results_url: 'data.json'
         </td>
       </tr>
       <tr ng-hide="group.$hideRows" ng-repeat="feature in group.data">
-        <td data-title="'Feature'" sortable="feature">
+        <td data-title="'Feature'" sortable="'feature'">
           [[feature.feature]]
         </td>
-        <td data-title="'fog'" ng-class="{'passed': feature.fog === 'passed', 'failed': feature.fog === 'failed'}" sortable="fog">
-          [[feature.fog]]
-        </td>
-        <td data-title="'gophercloud'" ng-class="{'passed': feature.gophercloud === 'passed', 'failed': feature.gophercloud === 'failed'}" sortable="gophercloud">
-          [[feature.gophercloud]]
-        </td>
-        <td data-title="'jclouds'" ng-class="{'passed': feature.jclouds === 'passed', 'failed': feature.jclouds === 'failed'}" sortable="jclouds">
-          [[feature.jclouds]]
-        </td>
-        <td data-title="'openstack.net'" ng-class="{'passed': feature.openstack_net === 'passed', 'failed': feature.openstack_net === 'failed'}" sortable="openstack.net">
-          [[feature.openstack_net]]
-        </td>
-        <td data-title="'php-opencloud'" ng-class="{'passed': feature.php_opencloud === 'passed', 'failed': feature.php_opencloud === 'failed'}" sortable="php-opencloud">
-          [[feature.php_opencloud]]
-        </td>
-        <td data-title="'pkgcloud'" ng-class="{'passed': feature.pkgcloud === 'passed', 'failed': feature.pkgcloud === 'failed'}" sortable="pkgcloud">
-          [[feature.pkgcloud]]
-        </td>
-        <td data-title="'pyrax'" ng-class="{'passed': feature.pyrax === 'passed', 'failed': feature.pyrax === 'failed'}" sortable="pyrax">
-          [[feature.pyrax]]
-        </td>
+        {% for sdk_hash in site.data.sdks %}
+          {% assign sdk_name = sdk_hash[0] %}
+          {% assign sdk_handle = sdk_name | downcase | replace: ' ', '_' | replace: '-', '_' | replace: '.', "_" %}
+          {% assign sdk = sdk_hash[1] %}
+          <td data-title="'{{ sdk_name }}'" ng-class="{'passed': feature.{{ sdk_handle }} === 'passed', 'failed': feature.{{ sdk_handle }} === 'failed'}" sortable="'{{ sdk_handle }}'">
+            [[feature.{{ sdk_handle }}]]
+          </td>
+        {% endfor %}
       </tr>
     </tbody>
   </table>
